# fastotv_cpp

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
include/fastotv/: client.h  types.h
include/fastotv/client/: client.h  commands_factory.h
include/fastotv/commands/: commands.h
include/fastotv/commands_info/: auth_info.h  catchup_generate_info.h  catchup_info.h  catchup_undo_info.h  catchups_info.h  channel_info.h  channels_info.h  client_info.h  content_request_info.h  content_requests_info.h  device_info.h  devices_info.h  epg_info.h  favorite_info.h  interrupt_stream_time_info.h  login_info.h  machine_info.h  movie_info.h  notification_text_info.h  operation_system_info.h  ping_info.h  programme_info.h  project_info.h  recent_stream_time_info.h  runtime_channel_info.h  serial_info.h  series_info.h  server_info.h  shutdown_info.h  stream_base_info.h  vod_info.h  vods_info.h
include/fastotv/commands_info/ml/: machine_learning.h  notification_info.h  types.h
include/fastotv/protocol/: protocol.h  types.h
include/fastotv/server/: client.h  commands_factory.h
include/fastotv/types/: alpha_method.h  aws_prop.h  azure_prop.h  cef.h  drm_key.h  font.h  google_prop.h  http_header.h  http_proxy.h  input_uri.h  input_url.h  kvs_prop.h  login_and_password.h  logo.h  meta_url.h  ndi_prop.h  output_uri.h  output_url.h  overlay_url.h  programme.h  pyfastostream.h  rsvg_logo.h  srt_key.h  stream_link.h  stream_overlay.h  stream_ttl.h  text_overlay.h  utils.h  webrtc_prop.h  whep_prop.h  whip_prop.h  wpe.h
include/fastotv/types/ml/: audio_stabilization.h  background_effect.h  machine_learning.h
src/: CMakeLists.txt  client.cpp  config.h.in  types.cpp
src/client/: client.cpp  commands_factory.cpp
src/commands/: commands.cpp
src/commands_info/: auth_info.cpp  catchup_generate_info.cpp  catchup_info.cpp  catchup_undo_info.cpp  channel_info.cpp  client_info.cpp  content_request_info.cpp  device_info.cpp  epg_info.cpp  favorite_info.cpp  interrupt_stream_time_info.cpp  login_info.cpp  machine_info.cpp  movie_info.cpp  notification_text_info.cpp  operation_system_info.cpp  ping_info.cpp  programme_info.cpp  project_info.cpp  recent_stream_time_info.cpp  runtime_channel_info.cpp  serial_info.cpp  server_info.cpp  shutdown_info.cpp  stream_base_info.cpp  vod_info.cpp
src/commands_info/ml/: machine_learning.cpp  notification_info.cpp  types.cpp
src/protocol/: protocol.cpp  types.cpp
src/server/: client.cpp  commands_factory.cpp
src/types/: alpha_method.cpp  aws_prop.cpp  azure_prop.cpp  cef.cpp  drm_key.cpp  font.cpp  google_prop.cpp  http_header.cpp  http_proxy.cpp  input_uri.cpp  input_url.cpp  kvs_prop.cpp  login_and_password.cpp  logo.cpp  meta_url.cpp  ndi_prop.cpp  output_uri.cpp  output_url.cpp  overlay_url.cpp  programme.cpp  pyfastostream.cpp  rsvg_logo.cpp  srt_key.cpp  stream_link.cpp  stream_overlay.cpp  stream_ttl.cpp  text_overlay.cpp  utils.cpp  webrtc_prop.cpp  whep_prop.cpp  whip_prop.cpp  wpe.cpp
src/types/ml/: audio_stabilization.cpp  background_effect.cpp  machine_learning.cpp
tests/: test_input_uri.cpp  test_output_uri.cpp  test_serializer.cpp
